FP/src/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appka
  namespace: danit-app
  labels:
    app: appka
spec:
  type: ClusterIP
  selector:
    app: appka
  ports:
    - name: http
      port: 80
      targetPort: 8080
