FP/src/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appka
  namespace: danit-app
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: app.vshuleshko-danit-devops13fp.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appka
                port:
                  number: 80
